# gpt-rs

./: Cargo.toml  LICENSE  README.md
src/: client.rs  entry_point.rs  error.rs  lib.rs  prelude.rs
src/chat/: config.rs  mod.rs  model.rs
src/image/: mod.rs  model.rs
