[package]
name = "gpt-rs"
version = "0.1.1"
authors = ["Takumi Kobayashi <takumi.kobayashi.development@gmail.com>"]
edition = "2021"
description = "This crate provides a simple way to interact with the OpenAI API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kobayashi-takumi/gpt-rs"
homepage = "https://github.com/Kobayashi-takumi/gpt-rs"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
